# vision_pipeline

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  docker_build.sh  docker_run.sh  foundation_models.py  package.xml  setup.cfg  setup.py  utils.py  visionpipeline.py
Docker/: ARM_Dockerfile  Dockerfile  arm_docker_build.sh  docker_build.sh  docker_run.sh  docker_run_desktop.sh  docker_run_gpu.sh  docker_run_robot.sh  enter_docker.sh
Docker/CycloneConfigs/: cyclonedds_desktop.xml  cyclonedds_robot.xml
Rviz/: Experiment.rviz  FoundationModels.rviz  RS_RVIZ.rviz  VP.rviz  VP_RVIZ.rviz
launch/: example_client.launch.py  foundation_models.launch.py  realsense_cameras.launch.py  vision_pipeline_rviz.launch.py  vp.launch.py
vision_pipeline/: FoundationModels.py  FoundationModels_RosWrapper.py  PublisherMain.py  RS_Publisher_Main.py  RealsenseInterface.py  RobotMain.py  RosRealsense.py  RosVisionPipeline.py  RosWrappers.py  SubscriberMain.py  VP_RVIZ.rviz  VisionPipeline.py  VisionPipeline_RosWrapper.py  capture_cameras.py  config.json  config.py  foundation_models.py  ignoreme.py  list_realsense_devices.py  main.py  subscriber.py  utils.py  visionpipeline.py
vision_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vision_pipeline/Publishers/: HeadPublisher.py  LArmPublisher.py  run_publishers.py  run_publishers.sh
vision_pipeline/ROS/: RosRealsense.py  RosVisionPipeline.py  frequency_measure.py  main.py
vision_pipeline/core/: BBBackBones.py  SAM2.py  VisionPipeline.py
vision_pipeline/experiments/: OpenBoxHardCode.py  ablation-trajectories.csv  analyze_trajectories.py  behaviors.py  calib.py  calibrate_camera.py  calibration_computation.py  proposed.py  trajectories.csv
vision_pipeline/finetuning/: SplitGeneration.py  clean.sh  eval_finetuning.py  experiment_results.txt  visualization.py  yolo_finetuning.py
vision_pipeline/utils/: math_utils.py  realsense_devices.py  ros_utils.py  scratch.py
